src/tests/cases/snapshots/bandwhich__tests__cases__ui__basic_processes_with_dns_queries.snap
---
source: src/tests/cases/ui.rs
expression: terminal_draw_events.lock().unwrap().join(SNAPSHOT_SECTION_SEPARATOR)
---
IF: interface_name | Total Rate (Up / Down): 0.00B / 0.00B                                                                                                                                    
âUtilization by process nameââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââ
âProcess                                                               PID                            Connections                    Rate (Up / Down)                                        â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
â                                                                                                                                                                                            â
ââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââââ
 Press <SPACE> to pause. Use <TAB> to rearrange tables. (DNS queries shown).
